added aromactics page

--- a/_footer.html
+++ b/_footer.html
@@ -23,10 +23,10 @@
             <h3>Присоединиться</h3>
             <div class="social-icons">
                 <a href="https://vk.com/cci.friday" target="_blank">
-                    <img src="images/vk.png" alt="VK">
+                    <img src="https://pbc-index.ru/images/vk.png" alt="VK">
                 </a>
                 <a href="https://www.youtube.com/@CCI.Friday" target="_blank">
-                    <img src="images/youtube.png" alt="YouTube">
+                    <img src="https://pbc-index.ru/images/youtube.png" alt="YouTube">
                 </a>
             </div>
         </div>
